--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
           
         </div>
         <div class="map-section">
-            <img src="/assets/css/img/map.jpg" alt="Map">
+            <img src="assets/css/img/map.jpg" alt="Map">
         </div>
 
         
